0024718: Broken build on VC8 (VS 2005) if TBB is used

Macro _WIN32_WINNT defined in OpenGl_SceneGeometry.cxx for building with TBB on VS 2005